# random-spotify-python-playground

./: .cache  .gitignore  README.md  env.sample.conf  fast-main.py  flask-main.py  main.py  pyproject.toml  spotify-app.docker-compose.yml
example_json/: album.json  artists.json  current_playbackd.json  track.json
spotify-api/: Dockerfile  README.md  env.sample.conf  fast-main.py  pyproject.toml  requirements.txt  spotify-app.docker-compose.yml
spotify-api/utils/: Authentication.py  Class.py
workflow-process/: Dockerfile  README.md  airflow.docker-compose.yml  docker-compose.yml  pyproject.toml
workflow-process/dags/: fetch_top_tracks_monthly_to_gcs.py
