[tool.poetry]
name = "random-spotify-python-playground"
version = "0.1.0"
description = ""
authors = ["slothPete7773 <Veerakit413@gmail.com>"]
readme = "README.md"
packages = [{include = "random_spotify_python_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.23.0"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
